# hermes-painter

./: .gitignore  AGENTS.md  CHANGELOG.md  HERMES.md  Makefile  README.md  pyproject.toml
canvas/: index.html
gallery/: summary.json
personas/: README.md
scripts/: auto_paint.py  bench_detail.py  build_detail_crop.py  build_hero_gif.py  demo_memory_arc.py  demo_stroke.py  download_unsplash.py  duet.py  gallery_build.py  hermes_tools.py  hi_res_paint.py  learn_from_targets.py  make_test_target.py  nightly_bench.py  paint_live.py  reflect.py  run_bench.py  timelapse.py  viewer.py
skills/: always_look_at_canvas_and_target.md  batch_patching.md  check_coverage_with_dump_gaps.md  combined_style.md  contour_tracing_for_legibility.md  detail_style.md  edge_strokes_as_detail_pass.md  expressionist_v3.md  find_features_before_painting.md  forest_vertical_strokes.md  grid_granularity_by_subject.md  hermes_style.md  lumiere_doree.md  multi_scale_style.md  night_scene_approach.md  observation_style.md  painter_strategy.md  painterly_over_ssim.md  prefer_real_photos_over_synthetic.md  promoted_image_type_balanced.md  promoted_image_type_dark.md  promoted_image_type_high_contrast.md  promoted_image_type_muted.md  promoted_palette_match_strong_for_sky_ground.md  promoted_palette_match_strong_for_sky_horizon_ground.md  promoted_ssim_ok_n.md  promoted_style_mode_pointillism.md  promoted_style_mode_tenebrism.md  promoted_style_mode_van_gogh.md  promoted_underpainting_n_strokes.md  snow_scene_approach.md  stroke_direction_by_content.md  sunset_warm_gradient.md  system_architecture.md  (+22 more)
(+107 files in other folders)
